--- a/fitness tracker/Base.lproj/Main.storyboard
+++ b/fitness tracker/Base.lproj/Main.storyboard
@@ -866,6 +866,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <navigationItem key="navigationItem" title="Goal Progress" id="Mbj-pH-FWa">
+                        <barButtonItem key="backBarButtonItem" title="Progress" id="Zta-qQ-CkM"/>
                         <barButtonItem key="rightBarButtonItem" title="Set Goal" id="g0l-5r-4Mc">
                             <connections>
                                 <segue destination="OYa-pN-i0a" kind="show" id="c5V-Z3-5e5"/>
@@ -958,14 +959,6 @@
                                                     <rect key="frame" x="0.0" y="26" width="375" height="113"/>
                                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                                 </pickerView>
-                                                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7Ge-gN-4JC">
-                                                    <rect key="frame" x="120" y="147" width="139" height="30"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <color key="backgroundColor" red="0.0" green="0.50196081400000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                                    <state key="normal" title="Save">
-                                                        <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                                    </state>
-                                                </button>
                                             </subviews>
                                         </tableViewCellContentView>
                                     </tableViewCell>
@@ -980,7 +973,7 @@
                     <tabBarItem key="tabBarItem" title="Goals" image="Goals2" selectedImage="Goals2" id="wwa-QM-WUM"/>
                     <toolbarItems/>
                     <navigationItem key="navigationItem" title="Set Goal" id="IZq-pU-ikh">
-                        <barButtonItem key="backBarButtonItem" title="Progress" id="EL1-b5-mwK"/>
+                        <barButtonItem key="backBarButtonItem" title="Progress" id="2w6-Oj-885"/>
                         <barButtonItem key="rightBarButtonItem" title="Save" id="Wt9-4T-pPw">
                             <connections>
                                 <action selector="saveGoal:" destination="OYa-pN-i0a" id="PUq-He-KD2"/>
@@ -992,9 +985,11 @@
                         <outlet property="endDatePicker" destination="Qfn-xs-6dn" id="haK-Jh-4eh"/>
                         <outlet property="milesPicker" destination="Qvh-Up-O1Z" id="YJv-ok-Olq"/>
                         <outlet property="practicePicker" destination="4F7-uk-LjL" id="P6l-0r-bsL"/>
+                        <segue destination="V3Q-Wf-TyP" kind="unwind" identifier="goBacktoGoalProgress" unwindAction="unwindToGoalVC:" id="Kvp-FU-fxZ"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dx7-Hi-juB" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="V3Q-Wf-TyP" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="2980" y="163.26836581709148"/>
         </scene>
